--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "startAll": "concurrently --kill-others-on-fail \"npm run start\" \"npm run client \"",
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "client": "cd.. && npm run dev --prefix ./ROCK-THE-BARRIO_FRONT"
+    "client": "cd.. && npm run dev --prefix ./ROCK-THE-BARRIO_FRONT",
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -22,5 +23,9 @@
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
